<resources>

    <string-array name="vehicle_types">
        <item>Make</item>
        <item>Dodge</item>
        <item>Ford</item>
        <item>Mercedes</item>
        <item>Nissan</item>
    </string-array>

    <string name="digits_regular">aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZ</string>
    <string name="digits_regular_with_numbers">aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZ0123456789</string>

    <string name="app_name">Drivable</string>
    <string name="sample_text">SAMPLE TEXT</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="string_password">Password</string>
    <string name="string_email">Email</string>
    <string name="string_forgot_password">Forgot Password?</string>
    <string name="title_new_account">New Account</string>
    <string name="string_company">Company</string>
    <string name="string_image_hint">ADD IMAGE</string>
    <string name="string_company_acronym">Company Acronym</string>
    <string name="string_first_name">First Name</string>
    <string name="string_last_name">Last Name</string>
    <string name="string_image">Image</string>
    <string name="string_confirm_password">Confirm Password</string>
    <string name="sample_number">##</string>
    <string name="string_total">Total</string>
    <string name="string_active">Active</string>
    <string name="string_inactive">Inactive</string>
    <string name="btn_title_fleet">My Fleet</string>
    <string name="title_fleet_view">Fleet Status</string>
    <string name="title_btn_update_email">Update Email</string>
    <string name="title_btn_update_password">Update Password</string>
    <string name="title_tv_owner">Owner:</string>
    <string name="title_tv_email">Email:</string>
    <string name="string_search">Search</string>
    <string name="sample_vin">#################</string>
    <string name="menu_title_profile">Profile</string>
    <string name="menu_title_edit_profile">Edit Profile</string>
    <string name="title_update_email">Update Email</string>
    <string name="btn_update">Update</string>
    <string name="string_new_email">New Email</string>
    <string name="string_original_email">Original Email</string>
    <string name="title_update_password">Update Password</string>
    <string name="string_original_password">Original Password</string>
    <string name="string_new_password">New Password</string>
    <string name="menu_title_sign_out">Sign Out</string>
    <string name="empty_vehicles">No Vehicles Found</string>
    <string name="fab_add">fab add</string>
    <string name="title_status">Status:</string>
    <string name="title_specs">Specs</string>
    <string name="title_drivetrain">Drivetrain:</string>
    <string name="title_model">Model:</string>
    <string name="title_make">Make:</string>
    <string name="title_year">Year:</string>
    <string name="menu_title_edit_vehicle">Edit Vehicle</string>
    <string name="title_new_vehicle">New Vehicle</string>
    <string name="switch_on">true</string>
    <string name="switch_off">false</string>
    <string name="title_active">Active?</string>
    <string name="string_odometer">Odometer</string>
    <string name="string_vin_num">Vin #</string>
    <string name="string_drivetrain">Drivetrain</string>
    <string name="string_model">Model</string>
    <string name="string_make">Make</string>
    <string name="hint_year">Year (####)</string>
    <string name="string_year">Year</string>
    <string name="sample_vehicle_name">Vehicle Name</string>
    <string name="btn_tittle_add">Add</string>
    <string name="sample_status">Status</string>
    <string name="btn_title_my_shops">My Shops</string>
    <string name="title_inactive_locations">Out of Service Vehicles</string>
    <string name="title_shop">Shop</string>
    <string name="string_lot">Lot</string>
    <string name="string_empty_shops">No Shops Found</string>
    <string name="title_name">Name</string>
    <string name="title_address">Address</string>
    <string name="string_line_1">Line 1</string>
    <string name="string_line_2">Line 2</string>
    <string name="string_shop_type">Shop Type</string>
    <string name="string_description">Description</string>
    <string name="string_maintenance">Maintenance</string>
    <string name="string_oil_change">Oil Change</string>
    <string name="string_tires_wheels">Tires/Wheels</string>
    <string name="string_glass">Glass</string>
    <string name="string_body">Body</string>
    <string name="string_go_to_google_maps">Go to Google Maps</string>
    <string name="menu_title_edit_shop">Edit Shop</string>
    <string name="menu_title_delete_shop">Delete Shop</string>
    <string name="title_maintenance_logs">Maintenance Logs</string>
    <string name="string_empty_logs">No Logs Added</string>
    <string name="title_new_maintenance_log">New Maintenance Log</string>
    <string name="title_date">Date</string>
    <string name="title_location">Location</string>
    <string name="title_report">Report</string>
    <string name="string_location">Location:</string>
    <string name="string_report">Report:</string>
    <string name="title_image">Image:</string>
    <string name="string_restore_vehicle">Restore Vehicle</string>
    <string name="string_qr_code">QR Code</string>
    <string name="string_nickname">Nickname</string>
</resources>