<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_200">

    <TextView
        android:id="@+id/new_vehicle_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_new_vehicle"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/new_vehicle_tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_vehicle_name"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp"
        android:textAlignment="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_top_10_white"
        android:elevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:isScrollContainer="true"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_year"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/new_vehicle_et_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_year"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_make"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <Spinner
                android:id="@+id/add_vehicle_spinner_make"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_model"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/new_vehicle_et_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_model"
                android:inputType="text"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_drivetrain"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/new_vehicle_et_drive_train"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_drivetrain"
                android:inputType="text"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_vin_num"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/new_vehicle_et_vin_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sample_vin"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="17"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_odometer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/new_vehicle_et_odometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/string_odometer"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_active"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/new_vehicle_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:textOn="@string/switch_on"
                android:textOff="@string/switch_off"/>

            <Button
                android:id="@+id/new_vehicle_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/btn_tittle_add"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/orange"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>