<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_update_password"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_new_password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/update_password_et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_new_password"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_confirm_password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/update_password_et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <Button
            android:id="@+id/update_password_btn_update"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/btn_update"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/orange"
            android:layout_gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/update_password_progressbar_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/shadow"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/update_password_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </RelativeLayout>

</RelativeLayout>